# scubascore

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DOCKER-VERIFICATION.md  Dockerfile  E2E_VERIFICATION_REPORT.md  GEMINI.md  LICENSE  QUICK-START.md  README.md  README.txt  VERIFICATION-STATUS.md  app.py  compensating.yaml  docker-compose.yml  manual_e2e_test.sh  profile_config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  scubascore.py  service_weights.yaml  service_weights_m365.yaml  setup.py  test-e2e.sh  test_e2e_profile_switching.py  test_scuba_results.json  weights.yaml
.github/workflows/: ci.yml
docs/: IMPROVEMENTS.md  architecture.md  git-workflow.md  migration-guide.md  release-notes-v1.0.0.md
scubascore/: __init__.py  cli.py  exceptions.py  models.py  parsers.py  reporters.py  scoring.py  validators.py
templates/: index.html  settings.html
tests/: __init__.py  test_integration.py  test_models.py  test_parsers.py  test_scoring.py
tests/fixtures/: nested_scuba_output.json  sample_scuba_output.json  service_based_output.json
