[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scubascore"
version = "1.0.0"
description = "Security Configuration Benchmarking and Analysis for Google Workspace"
readme = "README.md"
authors = [
    {name = "SCuBA Team", email = "scuba@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.0",
    "bandit[toml]>=1.7",
    "safety>=2.3",
    "twine>=4.0",
    "build>=0.10",
]

[project.urls]
Homepage = "https://github.com/yourusername/scubascore"
Documentation = "https://github.com/yourusername/scubascore#readme"
Repository = "https://github.com/yourusername/scubascore.git"
"Bug Tracker" = "https://github.com/yourusername/scubascore/issues"

[project.scripts]
scubascore = "scubascore.cli:main"

[tool.setuptools.packages.find]
include = ["scubascore*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]

[tool.bandit]
targets = ["scubascore"]
skip = ["B101"]  # assert_used

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=scubascore",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
branch = true
source = ["scubascore"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]